after fixing the x-axis scale related spacing errors

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ body {
     overflow-x: auto;
     overflow-y: hidden;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     /* height: calc(100vh - 55px); */
     scroll-behavior: smooth;
 }
